<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smaz Reader</string>
    <string name="developer_name">DigitalSoft</string>
    <string name="support_email">support@digital-soft.org</string>
    <string name="support_website">www.digital-soft.org</string>
    <string name="version">version:</string>
    <string name="by">by</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="action_channels">Channels</string>
    <string name="action_domains">Domains</string>
    <string name="action_about">About</string>
    <string name="log_tag">DigitalSoft</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="rssChannel">RssChannel</string>
    <string name="rssItem">RssItem</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_channels">Channels</string>
    <string name="action_add_channel">Add channel</string>
    <string name="thereAre">there are</string>
    <string name="newsToRead">news to read</string>
    <string name="title_activity_add_channel">Add Channel</string>
    <string name="title_activity_edit_channel">Edit Channel</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="link">Link</string>
    <string name="fill_info_message">please fill the fields with correct info</string>
    <string name="channel_added_successfullt_message">channel added successfully</string>
    <string name="channel_edited_successfullt_message">channel edited successfully</string>
    <string name="title_activity_domains">Domains</string>
    <string name="domain">Domain</string>
    <string name="select_domains_message">select domains that you are interested in:</string>
    <string name="channel_exists_message">Channel already exists</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="strictness">Strictness</string>
    <string name="show_news_count">Show news count</string>
    <string name="check_all">Select all</string>

</resources>
